style.css
/* ... */
.dash-actions li span.text i {
  display: none
}

.dash-actions li span.icon {
  display: inline-block
}


/* } */

.report--design .table {
  background: #fff;
  max-width: calc(100% - 30px);
  box-shadow: 1px 2px 4px 0 rgba(0, 0, 0, 0.12)
}

@media screen and (max-width: 768px) {
  .table {
    white-space: nowrap;
    overflow-x: scroll;
    width: calc(100vw - 40px);
  }
  .mx-datepicker-top {
    flex-wrap: wrap!important;
  }
  .mx-datepicker-popup.range {
    width: calc(100vw - 10px)!important
  }
  .mx-datepicker-top span {
    flex-basis: 50%;
  }
  .mx-datepicker-top span::after {
    display: none
  }
  .mx-datepicker-popup>div {
    display: flex!important;
    flex-direction: column
  }
  .mx-datepicker-popup .mx-calendar {
    width: 100%!important;
  }
}

.no-shadow {
  box-shadow: none!important
}

.btn--add.is-gray {
  background: #83848a
}

.is-list-item.item-header .title {
  margin-top: 0;
}

.is-list-item.item-header .labels span.text {
  margin-right: 33px;
  font-size: 13px;
}

.is-list-item {
  height: auto!important;
  display: flex;
  align-items: center;
  position: relative;
}

.is-list-item h6 {
  display: flex;
  align-items: center;
  flex: 1;
  margin: 0;
  padding: 0
}

.is-list-item span.title {
  font-weight: bold;
  font-size: 15px;
}

.is-list-item h6 svg {
  margin-right: 10px;
}

.capitalizeFirstLetter::first-letter {
  text-transform: uppercase;
}

.mb-3 {
  margin-bottom: 30px;
}

.is-list-item .details {
  cursor: pointer;
  color: #000;
  padding: .3em;
  display: block
}

.is-list-item .dropdown-menu {
  left: auto!important;
  right: 0!important;
}

.is-list-item .dropdown-menu li {
  padding: .3em 0!important;
  height: auto!important;
  background-color: #ffffff;
  box-shadow: none!important;
  margin-bottom: 0!important
}

.is-list-item .dropdown-menu li a:hover {
  background: #eee!important
}


/* pull grid back */

.vue-grid-layout {
  margin-right: 0;
}

.vue-grid-layout.is-active {
  width: calc(100% - 270px)!important;
}

.mt-30 {
  margin-top: 30px;
}

.filter-sidebar {
  position: fixed;
  width: 260px;
  right: 0;
  height: calc(100vh - 40px);
  top: 40px;
  background: #e6dede;
  padding: 2em 1em;
  box-shadow: 1px 2px 4px 0 rgba(0, 0, 0, 0.12);
  z-index: 99999999999;
  transition: all 300ms;
  transform: translateX(100%)
}

.filter-sidebar.is-active {
  transform: translateX(0)
}

.filter-sidebar h3 {
  display: block;
  padding-bottom: 5px;
  margin-bottom: 15px;
  border-bottom: 1px dashed rgba(161, 160, 160, .6)
}

